# mods-in-orbit

./: package.json  tailwind.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri-codegen.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/mods/: commands.rs  mod.rs  modlist.rs  structs.rs
src-tauri/src/util/: fs.rs  launch.rs  mod.rs  path.rs  store.rs
src/lib/: types.ts  util.ts
src/lib/api/: commands.ts
src/lib/components/: DependenciesDialog.svelte  ModCard.svelte  ModDetails.svelte  ModList.svelte  ModListEntry.svelte
src/lib/components/fancy/: DefaultSidebar.svelte  Header.svelte  LaunchGame.svelte  ModCardList.svelte  ModDetails.svelte  ModList.svelte  ModListEntry.svelte  ModTabs.svelte
src/routes/: +layout.svelte  +page.svelte
